SSC-2021 search navigation, fix style on tablet viewport

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-search-navigation.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-search-navigation.less
@@ -89,6 +89,10 @@
 
                 .search-expand {
                     > i {
+                        bottom: -2px;
+                        color: @black;
+                        font-size: 24px;
+                        left: 20px;
                         pointer-events: none;
                     }
 
@@ -99,6 +103,7 @@
 
                     &__input {
                         background-color: @grey--f2;
+                        padding-left: 55px;
                         width: 100%;
                     }
 
